// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeWithIgnoreFile empty provided 1`] = `
"# managed by skuba
node_modules
# end managed by skuba
"
`;

exports[`mergeWithIgnoreFile identical 1`] = `
"# managed by skuba
node_modules
# end managed by skuba"
`;

exports[`mergeWithIgnoreFile provided with managed section and additional lines 1`] = `
".idea
.vscode

# managed by skuba
node_modules
# end managed by skuba

.DS_Store
node_modules
"
`;

exports[`mergeWithIgnoreFile provided with no managed section 1`] = `
"# managed by skuba
node_modules
# end managed by skuba

.DS_Store
"
`;

exports[`mergeWithIgnoreFile provided with outdated managed section 1`] = `
"# managed by skuba
node_modules
.DS_Store
# end managed by skuba
"
`;

exports[`mergeWithIgnoreFile provided with outdated managed section and additional lines 1`] = `
".idea
.vscode

# managed by skuba
node_modules
.DS_Store
# end managed by skuba

.DS_Store
node_modules
"
`;
